Closed Bug 580982 Opened 15 years ago Closed 15 years ago

Matroska VP8+Vorbis works, only WebM should

Categories

(Core :: Audio/Video, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta4+

People

(Reporter: foolip, Assigned: kinetik)

References

()

Details

Attachments

(1 file)

User-Agent: Opera/9.80 (Windows NT 6.1; U; en) Presto/2.6.30 Version/10.70 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.1; WOW64; en-US; rv:2.0b1) Gecko/20100630 Firefox/4.0b1 Reported by nzasch at https://groups.google.com/a/webmproject.org/group/webm-discuss/browse_thread/thread/2a44b0ee33b39b13# Opera has already dropped support for the matroska doctype. Reproducible: Always Steps to Reproduce: 1. Visit http://storage.arav.ventuordici.org/test/pippo6.webm Actual Results: Video plays Expected Results: Video shouldn't play
Philip, I assume you haven't had much trouble with YouTube videos still using the "matroska" document type, or the V_MS/VFW/FOURCC codec ID? Here's the proposed fix for libnestegg: http://github.com/kinetiknz/nestegg/commit/dfc6af19cd9729b32d2cd91a2470eb9ebe9e69bf
Status: UNCONFIRMED → NEW
Ever confirmed: true
Nominating for 2.0. We should make sure this is fixed before 2.0 final, otherwise it will become increasingly difficult to fix it if people are producing invalid files.
blocking2.0: --- → ?
Matthew, I haven't seen any bug reports of playback problems on YouTube in Opera that I've linked back to not handling "matroska" doctype or V_MS/VFW/FOURCC.
Attached patch patch v0Splinter Review
Oops, those libnestegg weren't sufficient. Here's the rest of the changes: http://github.com/kinetiknz/nestegg/commit/844b8bc7695e2d60ad7bde3fb5105c0b24304640 Attached is a roll-up patch for mozilla-central. Includes mochitest with copy of seek.webm with matroska doctype. I wonder if it's worth treating SimpleBlocks (and other Matroska v2 elements) as unknown elements if the doctype version is 2.
Assignee: nobody → kinetik
Status: NEW → ASSIGNED
Attachment #463052 - Flags: review?(chris.double)
Attachment #463052 - Flags: review?(chris.double) → review+
Keywords: checkin-needed
Whiteboard: [needs landing]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing]
Depends on: 593814
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: