Bug 580982 - Remove workarounds for old YouTube WebM encodings.  Don't treat "matroska" doctype as valid WebM file.  r=doublec

--HG--
rename : media/libnestegg/include/_stdint.h => media/libnestegg/include/nestegg-stdint.h